--- a/index.html
+++ b/index.html
@@ -10,6 +10,29 @@
 </head>
 <body>
 
+
+  <main class="main__card">
+    <div class="card__image"></div>
+    <div class="card__content">
+      <h1 class="main__title">Shift the overall look and feel by adding these wonderful 
+        touches to furniture in your home</h1>
+        <p class="main__paragraph">Ever been in a room and felt like something was missing? Perhaps 
+          it felt slightly bare and uninviting. I’ve got some simple tips 
+          to help you make any room feel complete.</p>
+      <div class="user__content">
+        <img src="/images/avatar-michelle.jpg" alt="profile picture" class="profile__picture">
+        <div class="user__info">
+          <h2 class="secondary__title">Michelle Appleton</h2>
+          <p class="secondary__paragraph">28 Jun 2020</p>
+        </div>
+        <div class="share__button__container js-share__button__container">
+          <img src="/images/icon-share.svg" alt="share button icon" class="share__button"> 
+        </div>
+      </div>
+    </div>
+  </main>
+
+
   <!-- Shift the overall look and feel by adding these wonderful 
   touches to furniture in your home
 
